--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,7 +3,7 @@ project:
   output-dir: docs
 
 website:
-  title: "flo1met.github.io"
+  title: "Florian Metwaly"
   navbar:
     left:
       - href: index.qmd
