--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,7 +8,8 @@ website:
     left:
       - href: index.qmd
         text: Home
-      - about.qmd
+      - href: CV_2024.pdf
+        text: Curriculum Vitae
 
 format:
   html:
