--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,7 +8,7 @@ website:
     left:
       - href: index.qmd
         text: Home
-      - href: CV_2025.pdf
+      - href: CV_2026_GitHub.pdf
         text: Curriculum Vitae
 
 format:
